--- a/app.css
+++ b/app.css
@@ -15,6 +15,7 @@ body{
 }
 .content{
     margin-top: 100px ;
+    margin-bottom: 100px;
 }
 #mainNav{
     font-size: 1.5rem;
@@ -35,6 +36,10 @@ body{
 #headingGroup h1{
     font-size: 3rem;
     font-weight: 100;
+}
+.navbar.scrolled{
+    background: rgb(222, 192, 222);
+    transition: background 1000ms;
 }
 @media(max-width: 1200px){
     #headingGroup h1{
